# md-notes

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture.md  development.md  mobile.md  ux.md  versioning-and-collaboration.md
src/: App.tsx  ConflictDialog.tsx  HistoryPanel.tsx  LineEditor.tsx  ShareDialog.tsx  SyncDialog.tsx  file-api.ts  note-utils.test.ts  note-utils.ts  storage.ts  styles.css  sync.test.ts  sync.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
