[package]
name = "paper-trail"
version = "0.1.0"
description = "A local-first Markdown notes app"
authors = ["Paper Trail contributors"]
edition = "2021"

[lib]
name = "paper_trail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
